# CG_Labs_Johan

shaders/EDAF80/: phong.frag  phong_texture.frag  phong_texture.vert  skybox.vert  water.frag  water.vert
shaders/EDAN35/: accumulate_lights.frag  cloud.frag  cloud.vert  fill_gbuffer.frag  sky.frag  sky.vert
src/EDAF80/: CMakeLists.txt  CelestialBody.cpp  assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  assignment5.cpp  interpolation.cpp  parametric_shapes.cpp  plane.cpp  plane.hpp
src/EDAN35/: CMakeLists.txt  assignment2.cpp  notes.txt  project.cpp  project.hpp
src/core/: helpers.cpp
